src/DTL/CoolAndBedBundle/Resources/public/css/main.css
#contact {
    color: #1e91cb;
    font-family: 'Coda Caption', sans-serif;
    position: absolute;
    left: 700px;
}

.page-title h1 {
    font-family: 'Coda Caption', sans-serif;
    color: #b4d73a;
}

#contact {
    text-align: center;
}

.main-nav ul.nav li.menu-dormir {
	background-image: url('../images/cool%26bed_dormir.png');
    padding-left: 30px;
}

.main-nav {
    position: absolute;
    left: 0px;
    top: 100px;
}

.main-nav ul {
    list-style: none;
}

.main-nav ul.nav li {
    float: left;
	background-repeat:no-repeat;
    width: 146px;
    height: 0px;
    padding-top: 130px;
    text-align: center;
    font-family: 'Coda Caption', sans-serif;
    font-size: 20px;
}

.language-chooser__header {
    background-image: url('../images/headerContl.png');
}

.language-chooser__welcome {
    font-family: 'Coda Caption', sans-serif;
    font-size: 20px;
}

a.thumbnail {
    display: block;
    background-color: #fff;
    padding: 5px 5px 5px 5px;
    border: solid 1px;
    border-color: #444;
    margin: 10px;
}

a.thumbnail .caption {
    padding: 20px;
    font-family: courier;
    color: #444;
    font-size: 20px;
}

nav.col-md-1.language-nav {
    background-color: transparent;
}

footer ul {
    list-style: none;
}

footer ul li {
    float: left;
    padding: 20px;
}

footer ul li a {
    color: white;
    font-size: 12px;
    font-family: sans-serif;
}

#headerCont {
    z-index: 100;
}

.main-nav ul.nav li a {
    color: #57c3ec;
}

.main-nav ul.nav li a:hover {
    color: #b4d73a;
}

.main-nav ul.nav li.active a {
    color: red;
}

.main-nav ul.nav li div.subtitle-link {
    font-size: 10px;
    background-color: #57c3ec;
    color: black;
}

.main-nav ul.nav li div.subtitle-link {
    font-size: 10px;
    background-color: #b4d73a;
    color: black;
}

.main-nav ul.nav li.menu-reserver{
   background-image: url("../images/cool%26bed_reserver.png");
}

.main-nav ul.nav li.menu-venir{
    background-image: url("../images/cool%26bed_venir.png");
}

.main-nav ul.nav li.menu-bouger{
	background-image:url('../images/cool%26bed_bouger.png');
}

.main-nav ul.nav li.menu-visiter{
	background-image:url('../images/cool%26bed_visiter.png');
}

.main-nav ul.nav li.menu-galerie{
	background-image:url('../images/cool%26bed_galerie_photo.png');
}

.clear {
    clear: both;
}

.main-nav ul.nav {
    margin-left: 270px;
    margin-top: -30px;
}

.page-content {
    padding: 20px;
}

